test/parser.d/invalid/ass5.surc.bad
n = 5

f(x: Integer): Integer = fndo
	var n: Integer <- x
	return n
